Ajustes na profile -Estilizando tabela de admin

--- a/leisure/src/main/resources/static/style/style.css
+++ b/leisure/src/main/resources/static/style/style.css
@@ -24,6 +24,7 @@
 @import url('profile-anunciar.css');
 @import url('profile-anuncio.css');
 @import url('profile-meusdados.css');
+@import url('profile-usuarios.css');
 @import url('rodape.css');
 @import url('trabalhe.css');
 
