--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -140,6 +140,12 @@
                 </div>
                 <div class="lista-menu__conteudo">
                     <li class="lista-menu__item btnAnunciar">
+                        <a class="container__link btnAnunciar" href="/usuario/perfil/usuarios">
+                            <span>ADM</span>
+                        </a>
+                    </li>
+                <div class="lista-menu__conteudo">
+                    <li class="lista-menu__item btnAnunciar">
                         <a class="container__link btnAnunciar" href="/usuario/perfil/anunciar">
                             <span>Anunciar</span>
                         </a>
