--- a/leisure/src/main/resources/templates/LoginCadastro.html
+++ b/leisure/src/main/resources/templates/LoginCadastro.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="cadastro__container__conteudo">
                         <label for="dadoTelefone">Telefone</label>
-                        <input type="tel" id="telefone" name="telefone" autocomplete="off" placeholder="Ex: (11)91010-2215" minlength="15" maxlength="15" onblur="checkIguality('telefone')" required data-cadastro="cadastroTelefone">
+                        <input type="text" id="telefone" name="telefone" autocomplete="off" placeholder="Ex: " minlength="11" maxlength="15" onblur="checkIguality('telefone')" required data-cadastro="cadastroTelefone" pattern="\d*">
                         <span id="telefone-feedback" class="feedback"></span>
                     </div>
                     <div class="modal-body__botoes d-flex flex-column gap-2 justify-content-center">
