--- a/leisure/src/main/resources/templates/fragments/head.html
+++ b/leisure/src/main/resources/templates/fragments/head.html
@@ -30,6 +30,7 @@
 
     <!-- JS LEISURE -->
     <script src="/script/jquery-3.7.1.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
     <script src="/script/main.js" defer></script>
     <script src="/script/viacep.js" defer></script>
     <script src="/script/profile.js" defer></script>
