--- a/leisure/src/main/resources/templates/fragments/profile.html
+++ b/leisure/src/main/resources/templates/fragments/profile.html
@@ -148,7 +148,7 @@
         </div>
 
         <!-- QUASE TERMINANDO -->
-        <div class="anunciar__conteudo__box" data-profile="anunciar">
+        <!-- <div class="anunciar__conteudo__box" data-profile="anunciar">
             <h3 class="titulo__terceiro">Estamos quase terminando...</h3>
             <div class="anunciar__conteudo__box__animacao">
                 <i class="fa-thin fa-face-laugh-squint"></i>
@@ -157,7 +157,7 @@
                 <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
                 <button class="anunciar__conteudo__botao-proximo" type="button">Próximo</button>
             </div>
-        </div>
+        </div> -->
 
         <!-- ENDEREÇO DO IMOVEL -->
         <div class="anunciar__conteudo__box" data-profile="anunciar">
@@ -247,26 +247,26 @@
                 id="imovelImagem" name="file">
             <div class="anunciar__conteudo__botao">
                 <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
-                <button class="anunciar__conteudo__botao-proximo" type="button">Próximo</button>
+                <button class="anunciar__conteudo__botao-proximo" type="button">Concluir</button>
             </div>
         </div>
 
         <!-- CONFIRMAÇÃO DO ANUNCIO -->
-        <div class="anunciar__conteudo__box" data-profile="anunciar">
+        <!-- <div class="anunciar__conteudo__box" data-profile="anunciar">
             <h3 class="titulo__terceiro">Deseja confirmar o seu anuncios?</h3>
             <div class="anunciar__conteudo__box__animacao">
                 <i class="fa-sharp fa-thin fa-question"></i>
-            </div>
+            </div> -->
             <!-- <label>
                 <input class="" type="checkbox" name="" required>
                 <p>Confirmo que todos os dados fornecidos são verdadeiros.</p>
             </label> -->
             
-            <div class="anunciar__conteudo__botao">
+            <!-- <div class="anunciar__conteudo__botao">
                 <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
                 <button class="anunciar__conteudo__botao-proximo" type="button">Próximo</button>
             </div>
-        </div>
+        </div> -->
 
         <!-- FINALIZAÇÃO -->
         <div class="anunciar__conteudo__box" data-profile="anunciar">
