--- a/leisure/src/main/resources/templates/fragments/rodape.html
+++ b/leisure/src/main/resources/templates/fragments/rodape.html
@@ -80,12 +80,12 @@
                     <span>E-mail</span>
                 </a>
             </li>
-            <li class="rodape__conteudo-item">
+            <!-- <li class="rodape__conteudo-item">
                 <a href="https://twitter.com" target="_blank" class="rodape__conteudo-link">
                     <i class="fa-brands fa-x-twitter"></i>
                     <span>X</span>
                 </a>
-            </li>
+            </li> -->
             <li class="rodape__conteudo-item">
                 <a href="https://instagram.com" target="_blank" class="rodape__conteudo-link">
                     <i class="fa-brands fa-instagram"></i>
