--- a/leisure/src/main/resources/static/style/index-carrossel.css
+++ b/leisure/src/main/resources/static/style/index-carrossel.css
@@ -2,7 +2,7 @@
     display: none;
 }
 
-@media screen and (min-width: 768px){
+/* @media screen and (min-width: 768px){
     .carrossel-inner {
         width: 100%;
         height: 800px !important;
@@ -12,6 +12,22 @@
         object-fit: cover;
         min-height: 800px;
         max-height: 1000px;
+    }
+
+    .carousel-control-prev, .carousel-control-next{
+        display: block;
+    }
+} */
+
+@media screen and (min-width: 800px){
+    /* .carrossel-inner {
+        height: 80vh !important;
+    } */
+    
+    .carousel-item img {
+        object-fit: cover;
+        /* width: 100%; */
+        height: 80vh;
     }
 
     .carousel-control-prev, .carousel-control-next{
