--- a/leisure/src/main/resources/static/style/style.css
+++ b/leisure/src/main/resources/static/style/style.css
@@ -48,8 +48,9 @@
 }
 
 body {
-	font-family: var(--font-family);
 	color: var(--cor-font-principal);
+	font-family: var(--font-family);
+	font-weight: 500;
 	overflow-x: hidden;
 }
 
@@ -93,12 +94,12 @@ input::placeholder {
 	color: var(--cor-font-principal);
     text-transform: uppercase;
 	font-size: var(--titulo-terceiro);
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .titulo__quarto {
 	color: var(--cor-font-principal);
-    font-weight: 500;
+    font-weight: 600;
 }
 
 @media (max-width: 767px) {
@@ -110,7 +111,7 @@ input::placeholder {
 	}
 }
 
-@media screen and (min-width: 768px){
+/* @media screen and (min-width: 768px){
 
 	:root {
 		--font-size: 1em;
@@ -121,13 +122,26 @@ input::placeholder {
 	main {
 		margin-top: 7em;
 	}
+} */
+
+@media screen and (min-width: 800px){
+
+	:root {
+		--font-size: 0.9em;
+		--titulo-segundo: 1.25em;
+		--titulo-terceiro: 1.15em;
+	}
+
+	main {
+		margin-top: 7em;
+	}
 }
 
-@media screen and (min-width: 1024px){
+/* @media screen and (min-width: 1024px){
 
 	:root {
 		--font-size: 1em;
 		--titulo-segundo: 1.25em;
 		--titulo-terceiro: 1.15em;
 	}
-}
+} */
