--- a/leisure/src/main/resources/templates/index.html
+++ b/leisure/src/main/resources/templates/index.html
@@ -93,7 +93,7 @@
                 <div class="como-comprar__container__conteudo">
                     <h2 class="titulo__segundo">Comprar um imóvel para chamar de seu e da sua familia</h2>
                     <p>Temos as melhores ofertas de casas para você e sua familia podendo ser negociada diretamente com o proprietário.</p>
-                    <a class="no-decoration btn-segundo" href="#">Veja destaques</a>
+                    <a class="no-decoration btn-segundo" href="#">Veja as ofertas</a>
                     <span>
                         <a class="no-decoration" href="#">Como comprar na LeisureImoveis <i class="fa-solid fa-arrow-right"></i></a>
                     </span>
