--- a/leisure/src/main/resources/templates/perfil.html
+++ b/leisure/src/main/resources/templates/perfil.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <!-- HEAD -->
 <head th:replace="~{fragments/head :: head}"></head>
 
